# ai-babysteps

./: binaryBookClassifier.py  clean.py  common_subjects.py  download_all_books.py  find_missing.py  genre_classifier.py  nltk-playground.py  pyproject.toml  random-book.py  random_book.py  sampleClassification.py  scrape_book.py  sentiment_analysis.py
books/: 11.txt  13.txt  22134.txt
