[tool.poetry]
name = "ai-babysteps"
version = "0.1.0"
description = ""
authors = ["scaboodles <owenj.wolff2@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_babysteps"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
