[tool.poetry]
name = "ai-babysteps"
version = "0.1.0"
description = ""
authors = ["scaboodles <owenj.wolff2@gmail.com>"]
readme = "README.md"
packages = [{include = "ai_babysteps"}]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
nltk = "^3.8"
regex = "^2022.10.31"
tensorflow = "2.11.0"
pandas = "^1.5.2"
numpy = "^1.24.1"
plotly = "^5.11.0"
matplotlib = "^3.6.2"
h5py = "^3.7.0"
lxml = "^4.9.2"
langdetect = "^1.0.9"
scikit-learn = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
